update scalariform to point to com.danieltrinh instead of org.scalariform

--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.scalariform</groupId>
+  <groupId>com.danieltrinh</groupId>
   <artifactId>scalariform.parent</artifactId>
-  <version>0.1.5-SNAPSHOT</version>
+  <version>0.1.6-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <!-- scm configuration is require to extract the github hash-->
@@ -140,7 +140,7 @@
     <profile>
       <id>scala-2.11.x</id>
       <properties>
-        <scala.version>2.11.0-SNAPSHOT</scala.version>
+        <scala.version>2.11.1</scala.version>
         <version.suffix>2_11</version.suffix>
       </properties>
       <dependencies>
